# tdt4230_project_raytracing

./: .gitignore  Cargo.toml  README.md  build.rs  vert.spv
assets/models/: 3x3x3_point.ply  monu1_point.ply
assets/settings/: camera.ron
assets/shaders/: octree_update.comp  quad.vert  raytracer.comp  state_update.comp  state_update_template.comp  terrain_generator.comp  triangle.frag  triangle.vert
src/: main.rs  resources.rs
src/renderer/: camera.rs  compute_shader.rs  core.rs  mod.rs  octree.rs  program.rs  shader.rs  texture.rs  utils.rs  vao.rs  vbo.rs
src/utility/: camera.rs  chronos.rs  direction.rs  input_handler.rs  mod.rs  pixel.rs  ply_point_loader.rs  shader_builder.rs
