[package]
name = "gl_gpupe"
version = "0.1.0"
authors = ["avokadoen <akselhallajs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"


[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]
