[package]
name = "tdt4230_raytracer"
version = "0.1.0"
authors = ["avokadoen <akselhallajs@gmail.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.3.1"

[dependencies]
gl = "0.14.0"
image = "0.23.4"
rand = "0.8.3"

[dependencies.cgmath]
version = "0.18.0"
features = ["swizzle"]

[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]
