[package]
name = "tdt4230_raytracer"
version = "0.1.0"
authors = ["avokadoen <akselhallajs@gmail.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.3.1"

[dependencies]
gl = "0.14.0"
image = "0.23.4"
glutin = "0.26.0"
ron = "0.6.4"
notify = "4.0.16"

[dependencies.cgmath]
version = "0.18.0"

[dependencies.serde]
version = "1.0.125"
feature = ["serde", "derive"]